--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Sobre
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+<p>Esta é a pagina que fala sobre nós</p>
 </ion-content>
